# MOSAIC-UMD

./: Cargo.toml  README.md
UMD-CORE/: Cargo.toml
UMD-CORE/drivers/Cartsens/: Cartsens_EMA_AG500_24C.mosaicdriver
UMD-CORE/drivers/OpenFace/: OpenFace-v2.2.0_0-67_2d.mosaicdriver  OpenFace-v2.2.0_0-67_3d.mosaicdriver  OpenFace-v2.2.0_48-67_2d.mosaicdriver  OpenFace-v2.2.0_48-67_3d.mosaicdriver
UMD-CORE/src/: lib.rs
UMD-PY/: Cargo.toml
UMD-PY/src/: lib.rs
UMD-R/: Cargo.toml
UMD-R/src/: lib.rs
src/: lib.rs  status.rs
